tdf#160827: fix crash when retrieving _MarkAsFinal value (docx)

xPropertySet->getPropertyValue("_MarkAsFinal") can retrieve an Any
containing a boolean or a string

Change-Id: I1c8bafc12cdaf7fb98d3500507ba83b3e90f69cb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166763
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>